# StochiStats

./: .gitignore  CE.py  GP.py  INSTRUCTIONS.md  INTEGRATION.md  LICENSE  LS.py  PDM.py  Period.py  Phils_High_var.py  PyDM.py  README.md  StochiStats.py  Tools.py  __init__.py  cleaning.py  features.py  frequency_grid.py  gp.py  moments.py  pdm.py  peak_analysis.py  plotter.py  pyproject.toml  readme  restructure.sh  setup.py  stochistats_periodograms___init__.py  synthetic_lc_generator.py  test_stochistats.py  utils.py  variability.py
StochiStats.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
periodograms/: CE.py  GP2.py  GP3.py  LS2.py  PDM.c  PDM.py  PDMpy.c  PyDM.py  pdm2  pdm2_0  pdm2_1  pdm2_2  pdm2_3  pdm2_4  pdm2_5  pdm2_6  pdm2_7
stochistats/: __init__.py  comparison.py  fitting.py
stochistats/periodograms/: conditional_entropy.py  frequency_grid.py  lomb_scargle.py
stochistats/tests/: __init__.py  test_cleaning.py
